--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./reset.css">
 </head>
 <body>
    <header class="header">
@@ -61,24 +62,24 @@
         <h3 class="team-title" >Наша команда</h3>
         <ul class="team-list" >
             <li>
-                <img src="./img.jpg" alt="">
+                <img src="./card1.jpg" alt="">
                 <h5 class="team-list-title" >Ігор Дем'яненко</h5>
                 <p class="team-list-text" >Product Designer</p>
             </li>
             <li>
-                <img src="./img (1).jpg" alt=""
+                <img src="./card2.jpg" alt=""
                 width="270"
                 height="260">
                 <h5 class="team-list-title" >Ольга Рєпіна</h5>
                 <p class="team-list-text" >Frontend Developer</p>
             </li>
             <li>
-                <img src="./img (4).jpg" alt="">
+                <img src="./card3.jpg" alt="">
                 <h5 class="team-list-title" >Микола Тарасов</h5>
                 <p class="team-list-text" >Marketing</p>
             </li>
             <li>
-                <img src="./img (3).jpg" alt="">
+                <img src="./card4.jpg" alt="">
                 <h5 class="team-list-title" >Михайло Єрмаков</h5>
                 <p class="team-list-text" >UI Designer</p>
             </li>
