--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="nav">
         <ul class="nav-list" >
             <li><a class="nav-list-link" href="">Студія</a></li>
-            <li><a class="nav-list-link" href="">Портфоліо</a></li>
+            <li><a class="nav-list-link" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="nav-list-link" href="">Контакти</a></li>
         </ul>
     </nav>
@@ -87,13 +87,15 @@
     </section>
    </main>
    <footer class="footer" >
-    <a href="" class="logo">Web<span class="footer-logo">Studio</span></a>
-    <address class="address">
-        <ul class="address-list">
-            <li class="address-list-item"><a href="" class="address-list-link">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li class="address-list-item"><a href="" class="address-list-link">info@devstudio.com</a></li>
-            <li class="address-list-item"><a href="" class="address-list-link">+38 096 111 11 11</a></li>
-        </ul>
+    <div class="box">
+        <a href="" class="logo">Web<span class="footer-logo">Studio</span></a>
+        <address class="address">
+            <ul class="address-list">
+                <li class="address-list-item"><a href="" class="address-list-link">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="address-list-item"><a href="" class="address-list-link">info@devstudio.com</a></li>
+                <li class="address-list-item"><a href="" class="address-list-link">+38 096 111 11 11</a></li>
+            </ul>
+    </div>
     </address>
    </footer>
 </body>
